--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"@cfworker/json-schema": "^4.1.1",
 		"@modelcontextprotocol/sdk": "^1.20.0",
 		"@smithery/sdk": "^1.7.4",
 		"glob": "^11.0.0",
 		"zod": "^3.25.46"
 	},
 	"devDependencies": {
-		"@smithery/cli": "^1.6.3"
+		"@smithery/cli": "^1.6.3",
+		"@types/node": "^24.10.1",
+		"ts-node": "^10.9.2",
+		"typescript": "^5.9.3"
 	}
 }
-
