--- a/smithery.yaml
+++ b/smithery.yaml
@@ -1,15 +1,3 @@
-# Smithery configuration file: https://smithery.ai/docs/config#smitheryyaml
+runtime: typescript
+target: local
 
-startCommand:
-  type: stdio
-  configSchema:
-    # JSON Schema defining the configuration options for the MCP.
-    {}
-  commandFunction:
-    # A JS function that produces the CLI command based on the given config to start the MCP on stdio.
-    |-
-    (config) => ({
-      command: 'node',
-      args: ['dist/index.js']
-    })
-  exampleConfig: {}
