--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
-	"name": "smithery-local-filesystem",
+	"name": "readfile_system",
 	"version": "1.0.0",
 	"description": "MCP server with local filesystem access",
-	"main": "index.js",
-	"module": "./src/index.ts",
+	"main": "dist/index.js",
+	"bin": {
+		"readfile_system": "dist/index.js"
+	},
 	"type": "module",
 	"scripts": {
-		"dev": "smithery dev",
-		"build": "smithery build"
+		"build": "tsc",
+		"start": "node dist/index.js"
 	},
 	"keywords": [],
 	"author": "",
